# deployflow

./: .gitignore  README.md  evidences_.json  pyproject.toml  requirements.txt
src/deployflow/: __init__.py  cli.py  config.py  logger.py
src/deployflow/core/: ai.py  colors.py  utils.py
src/deployflow/core/analysis/: ai_analyzer.py  analyze.py  fs.py  prompts.py
src/deployflow/core/deployment/: actions.py  ai_deployer.py  prompts.py
test/analysis/: test_fs.py
